# parq

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: conda-test.yml
examples/: qat_resnet_cifar10.py  qat_resnet_imagenet.py  qat_simple.py  qat_vit_imagenet.py
model/: resnet.py
parq/: __init__.py  utils.py
parq/optim/: __init__.py  binarelax.py  nm_sgd.py  parq.py  proxmap.py  quantopt.py  softquant.py
parq/quant/: __init__.py  lsbq.py  quantizer.py  uniform.py
scripts/: README.md  qat_resnet_cifar10.sh  qat_resnet_imagenet.sh  qat_vit_imagenet.sh
setup/: README.md  create_env.sh  create_hdf5.py  create_hdf5.sh  parq.yml
tests/: test_lsbq.py  test_quantopt.py  test_uniform.py
utils/: h5_vision_dataset.py  train.py  visual.py
